# brain-core

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  BLOCKERS.md  BRAIN_REVIEW.md  Brain_API_Specification.yaml  Brain_Engineering_Standards.md  Brain_MVP_Architecture.md  CLAUDE.md  Dockerfile  HARDENING-SUMMARY.md  LICENSE  README.md  SECURITY.md  SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-navigation.md  redocly.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
api-reference/: actions-api.md  agents-api.md  audit-api.md  authentication.md  governance-api.md  ledger-api.md  mcp-server-api-reference.md  onboarding-api.md  overview.md  payment-intents-api.md  policy-api.md  proof-api.md  proposals-api.md  sources-api.md  tenants-api.md  webhooks-api.md  wiki-api.md
apis/: actions.md  agents.md  audit.md  authentication.md  ledger.md  mcp-server.md  overview.md  policy.md  sources.md  wiki.md
architecture/: data-flow.md  enterprise-readiness.md  readiness-summary.md  risks-and-mitigations.md  security-and-compliance.md  surface-approval-adapters.md  system-overview.md  tenant-isolation.md  write-paths.md
clients/: README.md
concepts/: agents.md  internal-agents.md  memory.md  overview.md  policy.md  proof.md
contracts/: .gitignore  AUDIT-RFP-DRAFT.md  AUDIT-SCOPE.md  README.md  audit-status.json  foundry.toml
core-concepts/: agents.md  audit-and-proof.md  policy-and-permissioning.md  raw-and-ledger.md  the-six-layer-stack.md  the-wiki.md
docs/: README.md  agent-autonomy-v3.md  api-surface.brainmvb.json  audit-outbox-recovery-runbook.md  blob-backup-restore.md  boot-binary-spec.md  demo-findings.md  demo-script.md  deployment-2026-05-11.txt  enterprise-readiness.md  external-agent-onboarding.md  golden-path.md  launch-readiness.docx  rails-matrix.md  (+18 more)
services/agents/: Dockerfile  README.md  coverage.xml  pyproject.toml
services/agents/brain_agents/: __init__.py  auth.py  client.py  config.py  deps.py  server.py
services/agents/brain_agents/anomaly/: __init__.py  agent.py  routes.py  scheduler.py
services/agents/brain_agents/document_extractor/: __init__.py  agent.py  extract_text.py  routes.py
services/agents/brain_agents/payment/: __init__.py  agent.py  routes.py
services/agents/brain_agents/plaid_extractor/: __init__.py  agent.py  routes.py
services/agents/brain_agents/reconciliation/: __init__.py  agent.py  routes.py
services/agents/tests/: conftest.py  test_anomaly.py  test_anomaly_scheduler.py  test_auth.py  test_brain_client.py  test_document_extractor.py  test_extract_text.py  test_payment.py  test_plaid_extractor.py  test_reconciliation.py  test_scaffold.py  test_server_boot.py
(+1609 files in other folders)
