# Brain agents workspace — Python 3.12.
# Hosts the extractor pipeline, /wiki/question reasoning, and the three MVP agents
# (reconciliation, payment, anomaly). See Brain_MVP_Architecture.md §3 "Layer 4".

[project]
name = "brain-agents"
version = "0.1.0"
description = "Brain extractors, reasoners, and MVP agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "UNLICENSED" }
authors = [{ name = "Brain Finance Inc." }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.50.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.5.0",
  # Deterministic document -> text for the document_extractor (RFC 0004).
  # CSV/plain text need only the stdlib; XLSX via openpyxl; text-layer PDFs
  # via pypdf. Scanned/image PDFs (OCR) remain a deferred follow-up.
  "openpyxl>=3.1.0",
  "pypdf>=6.13.3",  # >=6.13.3: GHSA-jm82-fx9c-mx94 (PDF stream-length memory exhaustion)
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "types-openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_agents"]

# ---------- black (formatting) ----------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------- ruff (linting) ----------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Conservative default set; expand as the codebase grows.
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "PL",   # pylint subset
  "SIM",  # flake8-simplify
  "ASYNC",
]
ignore = [
  "E501",   # line too long — black handles this
  "PLR0913", # too many arguments — agent configs often wide
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

# ---------- mypy (type checking) ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
# §12.2: type hints on every public function; mypy --strict in CI.

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "brain_agents"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=brain_agents",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["brain_agents"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
